                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 26-04-2005 changed: auto discovered xbmsp server show network share icon now
  - 25-04-2005 updated: German language file
  - 25-04-2005 updated: Chinese (Traditional) language file (Thnx to dog099)
  - 25-04-2005 updated: German (Austrian) language file (Thnx to CEOMR)
  - 25-04-2005 updated: Italian language file (Thnx to kotix)
  - 25-04-2005 updated: Norwegian language file (Thnx to vnm)
  - 24-04-2005 added: "Play Item" added to Music Context Menu to support PLAY action in Files and Library views since the Play action is not mapped by default on the gamepad
  - 24-04-2005 added: Play action in Music Files can be used to recursively play a folder using the temporary playlist (like in Music Library view)
  - 24-04-2005 fixed/changed: stuff-up with ac3/dts passthrough with dvdplayer and fixes to discontinuity handling
                              selecing audiotrack from dvdmenu should now be fully working.
  - 24-04-2005 changed: white button on keypad now brings up the new time/progessbar
  - 22-04-2005 fixed: Location of Kai Thumbs didn't use the thumbs folder configured.
  - 22-04-2005 added: gapless mp3 playback.  Files should be encoded with LAME (>3.90.3) in order to be truly gapless.
  - 22-04-2005 changed: Enable Visualisation combined into vis spincontrol (first option is Off).
  - 22-04-2005 changed: my music, adding songs to existing, stopped playlist will start the first song added
  - 22-04-2005 added: audioscrobbler now saves a cache if no server is available or connection failed
  - 22-04-2005 fixed: audioscrobbler tried to submit songs, before the initial handshake with the server succeeds